adding history to the request